commit for services

--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -5,7 +5,7 @@ location=Location
 info=Information
 requisName=Requisition Name
 created=Created On
-language=Language
+language=Язык
 keyWords=Keywords
 descr=Description
 skills=Skills
