formatter removed from common files

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -17,3 +17,11 @@ priorH=High
 priorL=Low
 priorM=Medium
 candidates=Candidates
+firstName=First Name
+secondName=Second Name
+experience=Experience
+link=Website
+overDist=Overall Distance
+lastChanges=Last Changes
+status= Status
+popoverText=The following profiles were found:
