common element changes

--- a/ui/requisitions_report/i18n/i18n.properties
+++ b/ui/requisitions_report/i18n/i18n.properties
@@ -1,3 +1,11 @@
 title=Title
 appTitle = App Title
 appDescription=App Description
+
+# Requisition Details
+req.detail.location=Location
+req.detail.project=Project
+req.detail.created=Created on
+req.detail.info=Information
+req.detail.skills=Skills
+req.detail.candidates=Candidates
