--- a/ui/requisitions_report/i18n/i18n.properties
+++ b/ui/requisitions_report/i18n/i18n.properties
@@ -1,3 +1,32 @@
 title=Title
 appTitle = App Title
 appDescription=App Description
+
+# Requisition Details
+req.detail.location=Location
+req.detail.project=Project
+req.detail.created=Created on
+req.detail.info=Information
+req.detail.skills=Skills
+req.detail.candidates=Candidates
+
+#Candidates Table
+
+cand.tab.firstName=First Name
+cand.tab.lastName=Last Name
+cand.tab.experience=Experience
+cand.tab.link=Website
+cand.tab.overDist=Overall Distance
+cand.tab.lastChanges=Last Changes
+cand.tab.status=Status
+
+# Requisitions Table
+req.table.id = ID
+req.table.name = Name
+req.table.account = Account
+req.table.subcategory = Subcategory
+req.table.createdby = Created By
+req.table.datetimeopened = Date/Time Opened
+req.table.remaingdays = Remaining Days 
+req.table.status = Status
+req.table.candidates = Candidates
