commit vacancy mngt

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -25,3 +25,4 @@ overDist=Overall Distance
 lastChanges=Last Changes
 status= Status
 popoverText=The following profiles were found:
+Profiles=Profiles
