--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -26,3 +26,6 @@ lastChanges=Last Changes
 status= Status
 popoverText=The following profiles were found:
 Profiles=Profiles
+
+#Comments
+comments=Comments
