Requisitions popover and small changes

--- a/ui/requisitions_report/i18n/i18n.properties
+++ b/ui/requisitions_report/i18n/i18n.properties
@@ -30,3 +30,14 @@ req.table.datetimeopened = Date/Time Opened
 req.table.remaingdays = Remaining Days 
 req.table.status = Status
 req.table.candidates = Candidates
+req.table.candidates.popover.title = Assigned candidates
+
+#Candidates Overview
+cand.overview.tab.header=Candidates
+cand.overview.tab.fname=First Name
+cand.overview.tab.lname=Last Name
+cand.overview.tab.region=Region
+cand.overview.tab.site=Website
+cand.overview.tab.suitability=Suitability
+cand.overview.tab.salary=Salary
+cand.overview.tab.reqs=Requisitions
