--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -5,7 +5,6 @@ location=Location
 info=Information
 requisName=Requisition Name
 created=Created On
-language=Language
 keyWords=Keywords
 descr=Description
 skills=Skills
@@ -29,3 +28,12 @@ Profiles=Profiles
 
 #Comments
 comments=Comments
+
+#Language
+language=Language
+en=English
+ru=Russian
+
+#Job Requisition
+new=New Job Requisition
+
