Requisitions create service

--- a/ui/requisitions_report/i18n/i18n.properties
+++ b/ui/requisitions_report/i18n/i18n.properties
@@ -31,6 +31,7 @@ req.table.remaingdays = Remaining Days
 req.table.status = Status
 req.table.candidates = Candidates
 req.table.candidates.popover.title = Assigned candidates
+req.ovw.footer.button=Show Candidates
 
 #Candidates Overview
 cand.overview.tab.header=Candidates
