--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -1,3 +1,6 @@
+#General
+requirError=Please, fill all required fields!
+
 title=Job Requisition
 appTitle = App Title
 appDescription=App Description
@@ -34,6 +37,7 @@ language=Language
 en=English
 ru=Russian
 
-#Job Requisition
-new=New Job Requisition
+
+
+
 
