Reload requisition after creation

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -32,6 +32,9 @@ language=Language
 en=English
 ru=Russian
 
+#Messages
+saveError= Error during requisition save. Please, contact application support 
+
 
 
 
