Candidates form update, some common updates

--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -53,3 +53,5 @@ cand.overview.tab.salary = Доход
 cand.overview.tab.reqs = Реквизиции
 
 cand.overview.footer.button=Присвоить заявке
+cand.page.popover.title=Профили
+cand.page.popover.choose=Выбрать
