--- a/ui/requisitions_report/i18n/i18n.properties
+++ b/ui/requisitions_report/i18n/i18n.properties
@@ -42,3 +42,5 @@ cand.overview.tab.site=Website
 cand.overview.tab.suitability=Suitability
 cand.overview.tab.salary=Salary
 cand.overview.tab.reqs=Requisitions
+
+cand.page.popover.title=Profiles
