Manage CandidatesOverview.view

--- a/ui/candidates_search/i18n/i18n.properties
+++ b/ui/candidates_search/i18n/i18n.properties
@@ -2,3 +2,13 @@ title=Title
 appTitle = App Title
 appDescription=App Description
 candidate = Профайл кандидата
+candidates = Кандидаты
+cadidates_overview = Открытый поиск кандидатов 
+
+cand.table.fname = First name
+cand.table.lname = Last name
+cand.table.location	= Location
+cand.table.website = Website
+cand.table.rating = Rating
+cand.table.salary = Salary
+cand.table.job_req = Job Requisitions
