--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -1,6 +1,4 @@
-title = Title
-appTitle = Название приложения
-appDescription = Описание приложения
+req.page.title=Заявки на подбор кандидата
 
 # Сведения о реквизиции
 req.detail.location = Расположение
