--- a/ui/candidates_search/i18n/i18n.properties
+++ b/ui/candidates_search/i18n/i18n.properties
@@ -1,10 +1,11 @@
 title=Title
 appTitle = App Title
 appDescription=App Description
-candidate = Профайл кандидата
-candidates = Кандидаты
-cadidates_overview = Открытый поиск кандидатов 
+candidate = Candidates profile
+candidates = Candidates
+cadidates_overview = Free search
 
+#candidates table
 cand.table.fname = First name
 cand.table.lname = Last name
 cand.table.location	= Location
@@ -12,3 +13,15 @@ cand.table.website = Website
 cand.table.rating = Rating
 cand.table.salary = Salary
 cand.table.job_req = Job Requisitions
+
+#Candidates Overview
+cand.overview.tab.header=Candidates
+cand.overview.tab.fname=First Name
+cand.overview.tab.lname=Last Name
+cand.overview.tab.region=Region
+cand.overview.tab.site=Website
+cand.overview.tab.suitability=Suitability
+cand.overview.tab.salary=Salary
+cand.overview.tab.reqs=Requisitions
+
+cand.page.popover.title=Profiles
