Additional popovers and other

--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -1,6 +1,4 @@
-title = Title
-appTitle = Название приложения
-appDescription = Описание приложения
+req.page.title=Заявки на подбор кандидата
 
 # Сведения о реквизиции
 req.detail.location = Расположение
@@ -47,11 +45,11 @@ cand.overview.page.title = Заявка на
 cand.overview.tab.header = Кандидаты
 cand.overview.tab.fname = Имя
 cand.overview.tab.lname = Фамилия
-cand.overview.tab.region = Область
+cand.overview.tab.region = Регион
 cand.overview.tab.site = Сайт
-cand.overview.tab.suitability = Пригодность
-cand.overview.tab.salary = Доход
-cand.overview.tab.reqs = Реквизиции
+cand.overview.tab.suitability = Релевантность
+cand.overview.tab.salary = Оклад
+cand.overview.tab.reqs = Заявка
 
 cand.page.title=Информация по кандидату
 cand.overview.footer.button=Присвоить заявке
