commit comments add, requis close, edit mode prefinal

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -1,4 +1,5 @@
-title=Job Requisition
+title=Job Requisition 
+titleM=Job Requisitions
 appTitle = App Title
 appDescription=App Description
 location=Location
@@ -22,10 +23,18 @@ lastChanges=Last Changes
 status= Status
 popoverText=The following profiles were found:
 Profiles=Profiles
-
+#Requisitions
+reqClose=Close
+reqOpen=Open
+reqNew=New
+reqClosed=Requisition is closed, it is not possible to edit closed requisition
+closedReq=Requisition was closed
 
 #Comments
 comments=Comments
+addCommentTitle=New Comment
+commReqCreated=created Job Requisition
+created= created
 
 #Language
 language=Language
@@ -34,6 +43,20 @@ ru=Russian
 
 #Messages
 saveError= Error during requisition save. Please, contact application support 
+
+#Details Page
+edit=Edit
+editError=Please, select Requisition to change
+close=Close
+save=Save
+cancel=Cancel 
+copy=Copy
+
+#Candidates
+assigned=Assigned
+approved=Approved
+proposed=Proposed
+rejected=Rejected
 
 
 
