--- a/ui/manage_vacancy/i18n/i18n_en.properties
+++ b/ui/manage_vacancy/i18n/i18n_en.properties
@@ -1,11 +1,11 @@
 title=Job Requisition
+titleM=Job Requisitions
 appTitle = App Title
 appDescription=App Description
 location=Location
 info=Information
 requisName=Requisition Name
 created=Created On
-language=Language
 keyWords=Keywords
 descr=Description
 skills=Skills
@@ -13,7 +13,47 @@ skillName=Skill Name
 weight=Weight
 project=Project
 priority=Priority
-priorH=High
-priorL=Low
-priorM=Medium
 candidates=Candidates
+firstName=First Name
+secondName=Second Name
+experience=Experience
+link=Website
+overDist=Overall Distance
+lastChanges=Last Changes
+status= Status
+popoverText=The following profiles were found:
+Profiles=Profiles
+#Requisitions
+reqClose=Close
+reqOpen=Open
+reqNew=New
+reqClosed=Requisition is closed, it is not possible to edit closed requisition
+closedReq=Requisition was closed
+
+#Comments
+comments=Comments
+addCommentTitle=New Comment
+commReqCreated=created Job Requisition
+created=created 
+
+#Language
+language=Language
+en=English
+ru=Russian
+
+#Messages
+saveError= Error during requisition save. Please, contact application support 
+
+#Details Page
+edit=Edit
+editError=Please, select Requisition to change
+close=Close
+save=Save
+cancel=Cancel
+copy=Copy
+
+#Candidates
+assigned=Assigned
+approved=Approved
+proposed=Proposed
+rejected=Rejected
