--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -1,19 +1,57 @@
-title=Job Requisition
-appTitle = App Title
-appDescription=App Description
-location=Location
-info=Information
-requisName=Requisition Name
-created=Created On
-language=Язык
-keyWords=Keywords
-descr=Description
-skills=Skills
-skillName=Skill Name
-weight=Weight
-project=Project
-priority=Priority
-priorH=High
-priorL=Low
-priorM=Medium
-candidates=Candidates
+title=Заявка
+titleM=Заявки
+location=Местоположение
+info=Информация
+requisName=Имя заявки
+created=Создана
+keyWords=Ключевые слова
+descr=Описание
+skills=Требования
+skillName=Требование
+weight=Значимость
+project=Проект
+priority=Приоритет
+candidates=Кандидаты
+firstName=Имя
+secondName=Фамилия
+experience=Опыт
+link=Сайт
+overDist=Общее соответствие
+lastChanges=Посл.изменения
+status= Статус
+popoverText=The following profiles were found:
+Profiles=Profiles
+
+#Requisitions
+reqClose=Закрыта
+reqOpen=Открыта
+reqNew=Новая
+reqClosed=Заявка была закрыта, редактирование закрытой заявки невозможно
+closedReq=Заявка закрыта
+#Comments
+comments=Комментарии
+addCommentTitle=Новый комментарий
+commReqCreated=создал(-а) новую Заявку
+created=Создана
+
+#Language
+language=Язык 
+en=English
+ru=Русский
+
+#Messages
+saveError= Ошибка сохранения! Обратитесь к администратору за деталями
+
+#Details Page
+edit=Редактировать
+editError=Пожалуйста, выберите заявку для редактирования
+close=Закрыть
+save=Сохранить
+cancel=Отменить
+copy=Копировать
+
+#Candidates
+assigned=Назнач.
+approved=Утвержд.
+proposed=Предлож.
+rejected=Отклон.
