--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -11,6 +11,8 @@ cand.table.rating = Рейтинг
 cand.table.salary = Оклад
 cand.table.job_req = Заявка
 
+cand.button.assign = Присвоить заявке(-ам)
+
 
 cand.page.popover.title=Профайлы
 cand.page.title=Информация по кандидату
