candidate experience table common, other small changes

--- a/ui/common/messagebundle_ru.properties
+++ b/ui/common/messagebundle_ru.properties
@@ -53,3 +53,10 @@ cand.skillsform.name=Навыки
 
 profiles.list.popover.title=Профили
 profiles.list.popover.found=У {0} были найдены следующие профили
+
+cand.experience.table.title=Опыт работы {0}
+cand.experience.table.company=Компания
+cand.experience.table.position=Позиция
+cand.experience.table.startdate=Дата начала
+cand.experience.table.enddate=Дата окончания
+cand.experience.table.description=Описание
