--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -57,4 +57,5 @@ cand.page.popover.title=Профили
 cand.page.popover.choose=Выбрать
 cand.page.header.info=Информация
 cand.page.header.skills=Навыки
+cand.page.header.experience=Опыт работы
 cand.page.breadcrumps=Список кандидатов:
