--- a/ui/manage_vacancy/i18n/i18n_en.properties
+++ b/ui/manage_vacancy/i18n/i18n_en.properties
@@ -29,6 +29,8 @@ reqOpen=Open
 reqNew=New
 reqClosed=Requisition is closed, it is not possible to edit closed requisition
 closedReq=Requisition was closed
+reqCopy=Requisition was copied
+copyTitle= - Copy
 
 #Comments
 comments=Comments
@@ -46,7 +48,7 @@ saveError= Error during requisition save. Please, contact application support
 
 #Details Page
 edit=Edit
-editError=Please, select Requisition to change
+editError=Please, select Requisition 
 close=Close
 save=Save
 cancel=Cancel
