--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -28,11 +28,13 @@ reqOpen=Открыта
 reqNew=Новая
 reqClosed=Заявка была закрыта, редактирование закрытой заявки невозможно
 closedReq=Заявка закрыта
+reqCopy=Заявка была скопирована
 #Comments
 comments=Комментарии
 addCommentTitle=Новый комментарий
 commReqCreated=создал(-а) новую Заявку
 created=Создана
+copyTitle= - Копия
 
 #Language
 language=Язык 
@@ -44,7 +46,7 @@ saveError= Ошибка сохранения! Обратитесь к админ
 
 #Details Page
 edit=Редактировать
-editError=Пожалуйста, выберите заявку для редактирования
+editError=Пожалуйста, выберите заявку
 close=Закрыть
 save=Сохранить
 cancel=Отменить
