Requisition language default value, some additional changes

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -16,7 +16,7 @@ priority=Priority
 candidates=Candidates
 firstName=First Name
 secondName=Second Name
-experience=Experience
+experience=Experience, years
 link=Website
 overDist=Overall Distance
 lastChanges=Last Changes
@@ -31,6 +31,7 @@ reqClosed=Requisition is closed, it is not possible to edit closed requisition
 closedReq=Requisition was closed
 reqCopy=Requisition was copied
 copyTitle= - Copy
+noReqText=There is no requisition for display. Please, choose one
 
 #Comments
 comments=Comments
