--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -14,7 +14,7 @@ priority=Приоритет
 candidates=Кандидаты
 firstName=Имя
 secondName=Фамилия
-experience=Опыт
+experience=Опыт, лет
 link=Сайт
 overDist=Общее соответствие
 lastChanges=Посл.изменения
@@ -35,6 +35,7 @@ addCommentTitle=Новый комментарий
 commReqCreated=создал(-а) новую Заявку
 created=Создана
 copyTitle= - Копия
+noReqText=Заявка для отображения не выбрана. Пожалуйста, выберите заявку из списка слева
 
 #Language
 language=Язык 
