add popovers to candidate search

--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -24,3 +24,4 @@ cand.page.header.skills=Навыки
 cand.page.breadcrumps=Поиск кандидатов:
 
 cand.skillsform.name=Навыки
+cand.page.header.experience=Опыт работы
