--- a/ui/candidates_search/i18n/i18n.properties
+++ b/ui/candidates_search/i18n/i18n.properties
@@ -13,6 +13,7 @@ cand.table.website = Website
 cand.table.rating = Rating
 cand.table.salary = Salary
 cand.table.job_req = Job Requisitions
+cand.page.header.experience = Candidate Experience
 
 #Candidates Overview
 cand.overview.tab.header=Candidates
