Requisition view adjusted, sorting for Candidates, labels and titles

--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -7,6 +7,9 @@ Req.detail.created = Создано
 req.detail.info = Информация
 req.detail.skills = Навыки
 req.detail.candidates = Кандидаты
+req.detail.page.title= Информация по заявке
+req.detail.page.from=из
+req.detail.page.breadcrumps= Заявки на подбор персонала
 
 #Candidates Table
 
@@ -50,6 +53,8 @@ cand.overview.tab.site = Сайт
 cand.overview.tab.suitability = Релевантность
 cand.overview.tab.salary = Оклад
 cand.overview.tab.reqs = Заявка
+cand.overview.assigned.toast = {0} кандидата были присвоены заявке {1} на проект {2}
+cand.overview.assign.select = Выберите кандидатов для назначения
 
 cand.page.title=Информация по кандидату
 cand.overview.footer.button=Присвоить заявке
@@ -59,3 +64,8 @@ cand.page.header.info=Информация
 cand.page.header.skills=Навыки
 cand.page.header.experience=Опыт работы
 cand.page.breadcrumps=Список кандидатов:
+
+cand.status.proposed=Предложен
+cand.status.assigned=Назначен
+cand.status.approved=Согласован
+cand.status.rejected=Отвергнут
