Apply assign candidates dialog

--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -24,3 +24,6 @@ cand.page.header.skills=Навыки
 cand.page.breadcrumps=Поиск кандидатов:
 
 cand.skillsform.name=Навыки
+
+cand.reqDialog.Title = Выберите открытую заявку
+cand.reqDialog.NoData = Не найдено соответствующих заявок
