fix add comment text

--- a/ui/manage_vacancy/i18n/i18n.properties
+++ b/ui/manage_vacancy/i18n/i18n.properties
@@ -37,7 +37,7 @@ noReqText=There is no requisition for display. Please, choose one
 comments=Comments
 addCommentTitle=New Comment
 commReqCreated= created Job Requisition
-created= created
+createdComment= {0} {1} created
 
 #Language
 language=Language
