--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -33,7 +33,7 @@ reqCopy=Заявка была скопирована
 comments=Комментарии
 addCommentTitle=Новый комментарий
 commReqCreated= создал(-а) новую Заявку
-created=Создана
+createdComment= {0} {1} создана
 copyTitle= - Копия
 noReqText=Заявка для отображения не выбрана. Пожалуйста, выберите заявку из списка слева
 
