Additional changes for candidates table

--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -17,7 +17,7 @@ cand.tab.firstName = Имя
 cand.tab.lastName = Фамилия
 cand.tab.experience = Опыт
 cand.tab.link = Сайт
-cand.tab.overDist = Общее расстояние
+cand.tab.overDist = Релевантность
 cand.tab.lastChanges = Последние изменения
 cand.tab.status = Статус
 
