Minor UI changes, app titles

--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -1,3 +1,5 @@
+appTitle = Открытый поиск кандидатов
+appDescription=Приложение для поиска кандидатов на открытые заявки
 candidate = Профайл кандидата
 candidates = Кандидаты
 cadidates_overview = Открытый поиск кандидатов 
