--- a/ui/manage_vacancy/i18n/i18n_ru.properties
+++ b/ui/manage_vacancy/i18n/i18n_ru.properties
@@ -1,3 +1,5 @@
+appTitle = Управление заявками на подбор персонала
+appDescription=Приложение управления заявками на подбор персонала
 title=Заявка
 titleM=Заявки
 location=Местоположение
