--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -1,3 +1,5 @@
+appTitle=Заявки на подбор персонала
+appDescription=Приложение подбора персонала на открытые заявки
 req.page.title=Заявки на подбор кандидата
 
 # Сведения о реквизиции
