Assign candidates + small fixes

--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -28,3 +28,5 @@ cand.skillsform.name=Навыки
 cand.reqDialog.Title = Выберите открытую заявку
 cand.reqDialog.NoData = Не найдено соответствующих заявок
 cand.page.header.experience=Опыт работы
+
+cand.overview.noCandidates = Необходимо выбрать кандидатов для присвоение заявкам
