Assign candidates to requisitions working

--- a/ui/common/messagebundle_ru.properties
+++ b/ui/common/messagebundle_ru.properties
@@ -49,6 +49,8 @@ cand.infoform.location=Местоположение
 cand.infoform.website=Сайт
 cand.infoform.description=Описание
 
+candidates.list.popover.title=Присвоенные заявки
+
 cand.skillsform.name=Навыки
 
 profiles.list.popover.title=Профили
