Filter Bar for Requisitions report

--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -29,6 +29,7 @@ req.status.closed=Закрыта
 req.status.cancel=Отменена
 req.status.hold=На удержании
 req.status.reject=Отклонена
+req.status.new=Новая
 
 # Таблица заявок
 req.table.title=Заявки
