Assign candidate, align Form, some validation

--- a/ui/candidates_search/i18n/i18n_ru.properties
+++ b/ui/candidates_search/i18n/i18n_ru.properties
@@ -24,6 +24,7 @@ cand.page.popover.choose=Выбрать
 cand.page.header.info=Информация
 cand.page.header.skills=Навыки
 cand.page.breadcrumps=Поиск кандидатов:
+cand.page.noProfileSelected = Пожалуйста, выберите профиль из списка для отображения
 
 cand.skillsform.name=Навыки
 
@@ -33,4 +34,4 @@ cand.page.header.experience=Опыт работы
 
 cand.overview.noCandidates = Необходимо выбрать кандидатов для присвоение заявкам
 cand.overview.noRequisitions = Необходимо выбрать заявки для присвоения
-cand.overview.candidateAssigned = Кандидат успешно присвоен выбранным заявкам
+cand.overview.candidateAssigned = Кандидат(ы) успешно присвоен выбранным заявкам
