--- a/ui/requisitions_report/i18n/i18n_ru.properties
+++ b/ui/requisitions_report/i18n/i18n_ru.properties
@@ -67,6 +67,7 @@ cand.page.header.info=Информация
 cand.page.header.skills=Навыки
 cand.page.header.experience=Опыт работы
 cand.page.breadcrumps=Список кандидатов:
+cand.page.noProfileSelected = Пожалуйста, выберите профиль из списка для отображения
 
 cand.status.proposed=Предложен
 cand.status.assigned=Назначен
